asignar actividad descargables

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -319,33 +319,41 @@
             function generatePDF() {
                 // Choose the element that our invoice is rendered in.
                 // const element = document.getElementById("modal-password");
-                var  element = document.querySelector('#modal-password .uk-modal-body');
-                element.classList.remove('uk-overflow-auto');
-                element.removeAttribute('style');
-                element.removeAttribute('uk-overflow-auto');
-                element.style.minHeight="150px";
-                element.style.height="auto";
-                // Choose the element and save the PDF for our user.
-                const opt = {
-                    margin: 1,
-                    filename: grupoGrado.concat('.pdf'),
-                    html2canvas: {
-                        dpi: 192,
-                        letterRendering: true
-                    },
-                    jsPDF: {
-                        unit: 'in',
-                        format: 'letter',
-                        orientation: 'portrait'
-                    }
-                };
-                html2pdf().set(opt).from(element).save();
-                    // .set({ html2canvas: { scale: 4 } })
-                    // .from(element)
-                    // .save(grupoGrado);
-                element.removeAttribute('style');
-                element.setAttribute('uk-overflow-auto','');
-                element.classList.add('uk-overflow-auto');
+                // var  element = document.querySelector('#modal-password .uk-modal-body');
+                // element.classList.remove('uk-overflow-auto');
+                // element.removeAttribute('style');
+                // element.removeAttribute('uk-overflow-auto');
+                // element.style.minHeight="150px";
+                // element.style.height="auto";
+                // // Choose the element and save the PDF for our user.
+                // const opt = {
+                //     margin: 1,
+                //     filename: grupoGrado.concat('.pdf'),
+                //     html2canvas: {
+                //         dpi: 192,
+                //         letterRendering: true
+                //     },
+                //     jsPDF: {
+                //         unit: 'in',
+                //         format: 'letter',
+                //         orientation: 'portrait'
+                //     }
+                // };
+                // html2pdf().set(opt).from(element).save();
+                //     // .set({ html2canvas: { scale: 4 } })
+                //     // .from(element)
+                //     // .save(grupoGrado);
+                // element.removeAttribute('style');
+                // element.setAttribute('uk-overflow-auto','');
+                // element.classList.add('uk-overflow-auto');
+
+                const queryString = window.location.search;
+                const urlParams = new URLSearchParams(queryString);
+                var grupo = urlParams.get('grupo');
+                var hiddenElement = document.createElement('a');
+                console.log(grupo);
+                hiddenElement.href = "http://reportes.e-squadron.com.mx/reporte-informacion?grupo=".concat(grupo);
+                hiddenElement.click();
 
             }
         </script>
