--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -77,11 +77,13 @@
                                 <h3 class="uk-text-uppercase uk-text-bold">grupo</h3>
                                 <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom"><span class="uk-text-bold">#{profesor['tareas.alumno.grade']}:</span> #{profesorGrupoControlador.grupoModelo.grado}</p>
                                 <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom"><span class="uk-text-bold">#{profesor['tareas.alumno.group']}:</span> #{profesorGrupoControlador.grupoModelo.grupo}</p>
+                                <span id="idProfesor" style="display: none">#{profesorGrupoControlador.grupoModelo.id}</span>
                             </div>
                         </div>
                     </div>
                     <div class="boton-regresa uk-width-2-3@m">
-                        <h:button styleClass="boton-maestro-base" value="regresar" outcome="tablero"/>
+                        <h:button styleClass="boton-maestro-base" value="#{boton['back']}" outcome="tablero"/>
+                        <button id="reporte" class="boton-escuadron-base uk-text-uppercase" >report</button>
                     </div>
                 </div>
                 <!--CARDS WRAPPER-->
@@ -93,7 +95,7 @@
                 <div class="js-filter" data-uk-sortable="handle: .drag-icon">
                     <!-- card -->
                     <div class="actividad-card uk-container">
-                        <div >
+                        <div>
                             <div class="padding-0">
                                 <div class="uk-grid uk-margin-small-left uk-child-width-1-1@m" uk-grid="">
                                     <div class="">
