--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -63,8 +63,8 @@
 					<div style="position:relative;padding-top:52.25%;" class="video-escuadron">
 <!--						<iframe src="https://www.youtube.com/embed/70tcgH90Nx0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""-->
 <!--								style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>-->
-						<div class="prueba"></div>
-						<video controls=""  style="position:absolute;top:0;left:0;width:100%;height:100%;"/>
+						<div id="anti-video"></div>
+						<div class="video-alum" style="position:absolute;top:0;left:0;width:100%;height:100%;" data-video="2PDXH4XBP44"></div>
 					</div>
 					<h1><h:graphicImage library="img" name="esquadron.svg" alt=""/>squadron</h1>
 					<p>Teachers everywhere create video classes for their students.
@@ -363,7 +363,7 @@
 		</footer>
 	</div>
 
-	<script type="application/javascript" src="https://sdk.amazonaws.com/js/aws-sdk-2.585.0.min.js"></script>
+<!--	<script type="application/javascript" src="https://sdk.amazonaws.com/js/aws-sdk-2.585.0.min.js"></script>-->
 	<h:outputScript library="js" name="landing/landing.js"/>
 	<h:outputScript library="js" name="TweenMax.min.js"/>
 	<h:outputScript library="js" name="landing/animacion-espacio.js"/>
