--- a/tecolotl-web/src/main/webapp/profesor/calificacion-gramatica.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/calificacion-gramatica.xhtml
@@ -88,7 +88,7 @@
                             </h:panelGroup>
                         </ui:repeat>
 
-                    <h:commandButton value="Enviar" onclick="return validaRespuesta(event)"
+                    <h:commandButton value="Send" onclick="return validaRespuesta(event)"
                                      action="#{calificacionGramaticaControlador.enviaRespuesta}"
                                      styleClass="boton-escuadron-base"/>
                 </h:form>
