--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -61,10 +61,12 @@
 				</div>
 				<div>
 					<div style="position:relative;padding-top:52.25%;" class="video-escuadron">
-<!--						<iframe src="https://www.youtube.com/embed/70tcgH90Nx0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""-->
-<!--								style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>-->
-						<div id="anti-video"></div>
-						<div class="video-alum" style="position:absolute;top:0;left:0;width:100%;height:100%;" data-video="2PDXH4XBP44"></div>
+						<iframe class="video-alum" src="https://www.youtube.com/embed/2PDXH4XBP44?enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="0"
+								style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+						<div id="anti-video">
+							<h:graphicImage id="botonply" library="img" name="/icono/youtube.svg" width="80px" height="80px" class="visibilidad"/>
+						</div>
+<!--						<div class="video-alum" style="position:absolute;top:0;left:0;width:100%;height:100%;" data-video="2PDXH4XBP44"></div>-->
 					</div>
 					<h1><h:graphicImage library="img" name="esquadron.svg" alt=""/>squadron</h1>
 					<p>Teachers everywhere create video classes for their students.
