--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -25,7 +25,6 @@
                 <h:link><h:outputText pt:uk-icon="database" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{administracion['menu.catalog']}</span></h:link>
                 <ul class="uk-nav-sub">
                     <li><h:link outcome="catalogo-administracion"><h:outputText pt:uk-icon="home" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{administracion['menu.catalog.administrator']}</span></h:link></li>
-                    <li><h:link outcome="catalogo-coordinacion"><h:outputText pt:uk-icon="home" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{administracion['menu.catalog.coordinator']}</span></h:link></li>
                 </ul>
             </li>
         </ul>
@@ -43,7 +42,15 @@
                         <div class="uk-grid uk-grid-small">
                             <div class="uk-width-1-3"><h4 class="uk-text-capitalize"><span class="uk-text-middle">Teachers</span></h4></div>
                             <div class="uk-width-expand uk-text-right panel-icons">
-                                <a href="#" class="uk-icon-link" uk-icon="icon: plus-circle; ratio: 1.5" uk-toggle="target: #modal-profesor" uk-tooltip="title:#{administracion['dashboard.button.add']}; pos: left; delay: 2000"/>
+                                <a href="#" class="" />
+                                <h:form>
+                                    <h:commandLink styleClass="uk-icon-link"
+                                                   pt:uk-icon="icon: plus-circle; ratio: 1.5"
+                                                   pt:uk-toggle="target: #modal-profesor"
+                                                   pt:uk-tooltip="title:#{administracion['dashboard.button.add']}; pos: left; delay: 2000">
+                                        <f:ajax render="formulario-modal-profesor"/>
+                                    </h:commandLink>
+                                </h:form>
                             </div>
                         </div>
                     </div>
@@ -77,9 +84,6 @@
                                          styleClass="uk-table uk-table-divider uk-table-middle uk-table-hover tabla-paginada tabla-profesor"
                                          headerClass="uk-background-primary letra-titulo uk-text-center"
                                          columnClasses="uk-text-center,uk-text-center,uk-text-center,uk-text-center,uk-text-center">
-                                <h:column>
-                                    <f:facet name="header">Id</f:facet>#{profesorModelo.id}
-                                </h:column>
                                 <h:column>
                                     <f:facet name="header">apodo</f:facet>
                                     ${profesorModelo.apodo}
@@ -264,7 +268,11 @@
                         </div>
                     </div>
                     <div class="uk-modal-footer uk-flex uk-flex-right">
-                        <button type="reset" class="uk-button uk-button-default uk-margin-small-right">#{boton['cancel']}</button>
+                        <h:commandButton value="#{boton['cancel']}" styleClass="uk-button uk-button-default uk-margin-small-right uk-modal-closel">
+                            <f:ajax listener="#{administracionProfesorControlador.limpiaModelo}"
+                                    onevent="function funciones(data) { cerrarModal(data, 'modalProfresor') }"
+                                    render="@form"/>
+                        </h:commandButton>
                         <h:commandButton value="${boton['add']}" onclick="cargaContrasenia()" styleClass="uk-button uk-button-secondary" rendered="#{empty administracionProfesorControlador.profesorModelo.id}">
                             <f:ajax execute="@form"
                                     listener="#{administracionProfesorControlador.inserta()}"
