Solucion de la incidencia 27

--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -178,6 +178,10 @@
                                         #{escuela.diasRestantes}
                                     </h:column>
                                     <h:column headerClass="uk-background-primary uk-width-small uk-text-center">
+                                        <f:facet name="header"><span class="letra-titulo">galaxia</span></f:facet>
+                                        #{escuela.galaxia}
+                                    </h:column>
+                                    <h:column headerClass="uk-background-primary uk-width-small uk-text-center">
                                         <f:facet name="header"><span class="letra-titulo ">#{etiqueta['options']}</span></f:facet>
                                         <h:outputText styleClass="uk-icon-button uk-text-center" pt:uk-icon="more-vertical"/>
                                         <h:panelGroup layout="block" styleClass="uk-dropdown" pt:uk-dropdown="mode: click">
