--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -174,7 +174,8 @@
                             <tr>
                                 <td colspan="8">
                                     <div class="uk-flex uk-flex-center">
-                                        <h:graphicImage library="img" name="vacio.svg" height="215" width="243" alt="vacio"/>
+                                        <!--<h:graphicImage library="img" name="vacio.svg" height="215" width="243" alt="vacio"/>-->
+                                        <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/vacio.svg" alt="vacio" height="215" width="243"/>
                                     </div>
                                 </td>
                             </tr>
